Closed
Bug 1377324
Opened 8 years ago
Closed 8 years ago
Scrolling on https://chrono.gg/ makes Firefox Nightly (56.0a1) crash
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | + | fixed |
People
(Reporter: kardekani, Assigned: mattwoodrow)
References
Details
(Keywords: crash, regression, Whiteboard: [gfx-noted])
Crash Data
Attachments
(2 files)
|
1.23 KB,
patch
|
mikokm
:
review+
|
Details | Diff | Splinter Review |
|
3.36 KB,
patch
|
mikokm
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Comment 1•8 years ago
|
||
[Tracking Requested - why for this release]: crash in normal browser operation.
Please always include rudimentary steps to reproduce when filing a bug. If filing crashes, it helps to copy a link to the crash report (available from about:crashes).
Happily, in this particular case I can reproduce: https://crash-stats.mozilla.com/report/index/e9c3e2cc-8295-4d5e-90ac-dcfe10170630 .
Not happening on beta, so setting some tracking flags. Milan, can you (ask someone else to) take a look?
STR:
1. open nightly
2. open https://chrono.gg/
3. scroll down the page
OS X 10.12.5, 15-inch mid-2015 retina mbp, graphics section:
Graphics
Features
Compositing OpenGL
Asynchronous Pan/Zoom wheel input enabled; scrollbar drag enabled
WebGL 1 Driver WSI Info CGL
WebGL 1 Driver Renderer ATI Technologies Inc. -- AMD Radeon R9 M370X OpenGL Engine
WebGL 1 Driver Version 2.1 ATI-1.51.8
WebGL 1 Driver Extensions GL_ARB_color_buffer_float GL_ARB_depth_buffer_float GL_ARB_depth_clamp GL_ARB_depth_texture GL_ARB_draw_buffers GL_ARB_draw_elements_base_vertex GL_ARB_draw_instanced GL_ARB_fragment_program GL_ARB_fragment_program_shadow GL_ARB_fragment_shader GL_ARB_framebuffer_object GL_ARB_framebuffer_sRGB GL_ARB_half_float_pixel GL_ARB_half_float_vertex GL_ARB_imaging GL_ARB_instanced_arrays GL_ARB_multisample GL_ARB_multitexture GL_ARB_occlusion_query GL_ARB_pixel_buffer_object GL_ARB_point_parameters GL_ARB_point_sprite GL_ARB_provoking_vertex GL_ARB_seamless_cube_map GL_ARB_shader_objects GL_ARB_shader_texture_lod GL_ARB_shading_language_100 GL_ARB_shadow GL_ARB_shadow_ambient GL_ARB_sync GL_ARB_texture_border_clamp GL_ARB_texture_compression GL_ARB_texture_compression_rgtc GL_ARB_texture_cube_map GL_ARB_texture_env_add GL_ARB_texture_env_combine GL_ARB_texture_env_crossbar GL_ARB_texture_env_dot3 GL_ARB_texture_float GL_ARB_texture_mirrored_repeat GL_ARB_texture_non_power_of_two GL_ARB_texture_rectangle GL_ARB_texture_rg GL_ARB_transpose_matrix GL_ARB_vertex_array_bgra GL_ARB_vertex_blend GL_ARB_vertex_buffer_object GL_ARB_vertex_program GL_ARB_vertex_shader GL_ARB_window_pos GL_EXT_abgr GL_EXT_bgra GL_EXT_bindable_uniform GL_EXT_blend_color GL_EXT_blend_equation_separate GL_EXT_blend_func_separate GL_EXT_blend_minmax GL_EXT_blend_subtract GL_EXT_clip_volume_hint GL_EXT_debug_label GL_EXT_debug_marker GL_EXT_depth_bounds_test GL_EXT_draw_buffers2 GL_EXT_draw_range_elements GL_EXT_fog_coord GL_EXT_framebuffer_blit GL_EXT_framebuffer_multisample GL_EXT_framebuffer_object GL_EXT_framebuffer_sRGB GL_EXT_geometry_shader4 GL_EXT_gpu_program_parameters GL_EXT_gpu_shader4 GL_EXT_multi_draw_arrays GL_EXT_packed_depth_stencil GL_EXT_packed_float GL_EXT_provoking_vertex GL_EXT_rescale_normal GL_EXT_secondary_color GL_EXT_separate_specular_color GL_EXT_shadow_funcs GL_EXT_stencil_two_side GL_EXT_stencil_wrap GL_EXT_texture_array GL_EXT_texture_compression_dxt1 GL_EXT_texture_compression_s3tc GL_EXT_texture_env_add GL_EXT_texture_filter_anisotropic GL_EXT_texture_integer GL_EXT_texture_lod_bias GL_EXT_texture_mirror_clamp GL_EXT_texture_rectangle GL_EXT_texture_shared_exponent GL_EXT_texture_sRGB GL_EXT_texture_sRGB_decode GL_EXT_timer_query GL_EXT_transform_feedback GL_EXT_vertex_array_bgra GL_APPLE_aux_depth_stencil GL_APPLE_client_storage GL_APPLE_element_array GL_APPLE_fence GL_APPLE_float_pixels GL_APPLE_flush_buffer_range GL_APPLE_flush_render GL_APPLE_object_purgeable GL_APPLE_packed_pixels GL_APPLE_pixel_buffer GL_APPLE_rgb_422 GL_APPLE_row_bytes GL_APPLE_specular_vector GL_APPLE_texture_range GL_APPLE_transform_hint GL_APPLE_vertex_array_object GL_APPLE_vertex_array_range GL_APPLE_vertex_point_size GL_APPLE_vertex_program_evaluators GL_APPLE_ycbcr_422 GL_ATI_blend_equation_separate GL_ATI_blend_weighted_minmax GL_ATI_separate_stencil GL_ATI_texture_compression_3dc GL_ATI_texture_env_combine3 GL_ATI_texture_float GL_ATI_texture_mirror_once GL_IBM_rasterpos_clip GL_NV_blend_square GL_NV_conditional_render GL_NV_depth_clamp GL_NV_fog_distance GL_NV_light_max_exponent GL_NV_texgen_reflection GL_NV_texture_barrier GL_SGI_color_matrix GL_SGIS_generate_mipmap GL_SGIS_texture_edge_clamp GL_SGIS_texture_lod
WebGL 1 Extensions ANGLE_instanced_arrays EXT_blend_minmax EXT_color_buffer_half_float EXT_frag_depth EXT_sRGB EXT_shader_texture_lod EXT_texture_filter_anisotropic MOZ_debug OES_element_index_uint OES_standard_derivatives OES_texture_float OES_texture_float_linear OES_texture_half_float OES_texture_half_float_linear OES_vertex_array_object WEBGL_color_buffer_float WEBGL_compressed_texture_s3tc WEBGL_compressed_texture_s3tc_srgb WEBGL_debug_renderer_info WEBGL_debug_shaders WEBGL_depth_texture WEBGL_draw_buffers WEBGL_lose_context MOZ_WEBGL_lose_context MOZ_WEBGL_compressed_texture_s3tc MOZ_WEBGL_depth_texture
WebGL 2 Driver WSI Info CGL
WebGL 2 Driver Renderer ATI Technologies Inc. -- AMD Radeon R9 M370X OpenGL Engine
WebGL 2 Driver Version 4.1 ATI-1.51.8
WebGL 2 Driver Extensions GL_ARB_blend_func_extended GL_ARB_draw_buffers_blend GL_ARB_draw_indirect GL_ARB_ES2_compatibility GL_ARB_explicit_attrib_location GL_ARB_gpu_shader_fp64 GL_ARB_gpu_shader5 GL_ARB_instanced_arrays GL_ARB_internalformat_query GL_ARB_occlusion_query2 GL_ARB_sample_shading GL_ARB_sampler_objects GL_ARB_separate_shader_objects GL_ARB_shader_bit_encoding GL_ARB_shader_subroutine GL_ARB_shading_language_include GL_ARB_tessellation_shader GL_ARB_texture_buffer_object_rgb32 GL_ARB_texture_cube_map_array GL_ARB_texture_gather GL_ARB_texture_query_lod GL_ARB_texture_rgb10_a2ui GL_ARB_texture_storage GL_ARB_texture_swizzle GL_ARB_timer_query GL_ARB_transform_feedback2 GL_ARB_transform_feedback3 GL_ARB_vertex_attrib_64bit GL_ARB_vertex_type_2_10_10_10_rev GL_ARB_viewport_array GL_EXT_debug_label GL_EXT_debug_marker GL_EXT_depth_bounds_test GL_EXT_texture_compression_s3tc GL_EXT_texture_filter_anisotropic GL_EXT_texture_mirror_clamp GL_EXT_texture_sRGB_decode GL_APPLE_client_storage GL_APPLE_container_object_shareable GL_APPLE_flush_render GL_APPLE_object_purgeable GL_APPLE_rgb_422 GL_APPLE_row_bytes GL_APPLE_texture_range GL_ATI_texture_mirror_once GL_NV_texture_barrier
WebGL 2 Extensions EXT_color_buffer_float EXT_texture_filter_anisotropic EXT_disjoint_timer_query MOZ_debug OES_texture_float_linear WEBGL_compressed_texture_s3tc WEBGL_debug_renderer_info WEBGL_debug_shaders WEBGL_lose_context MOZ_WEBGL_lose_context MOZ_WEBGL_compressed_texture_s3tc
Audio Backend audiounit
GPU #1
Active Yes
Vendor ID 0x1002
Device ID 0x6821
Diagnostics
AzureCanvasAccelerated 1
AzureCanvasBackend skia
AzureContentBackend skia
AzureFallbackCanvasBackend none
TileHeight 1024
TileWidth 1024
Decision Log
WEBRENDER
opt-in by default: WebRender is an opt-in feature
Severity: normal → critical
Crash Signature: [@ void mozilla::layers::ContainerRender<T> ]
status-firefox55:
--- → unaffected
status-firefox56:
--- → affected
tracking-firefox56:
--- → ?
Component: General → Graphics: Layers
Flags: needinfo?(milan)
Product: Firefox → Core
See Also: → 1374288
I can crash it on Windows as well.
OS: Mac OS X → All
Hits an assertion (aContainer->mPrepared is false) in ContainerRender here: https://dxr.mozilla.org/mozilla-central/source/gfx/layers/composite/ContainerLayerComposite.cpp#576
See bug 1370430 comment 38 - this seems to be the same thing. As in, mozregression points to a backout, and the analysis is that we should ask Matt about bug 1361970 and/or bug 1373479.
Flags: needinfo?(milan) → needinfo?(matt.woodrow)
Keywords: regressionwindow-wanted
Updated•8 years ago
|
Whiteboard: [gfx-noted]
Comment 4•8 years ago
|
||
Reproducible crash, looks like a regression in 56, so I'll track this for now.
| Assignee | ||
Comment 5•8 years ago
|
||
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Attachment #8883140 -
Flags: review?(mikokm)
| Assignee | ||
Comment 6•8 years ago
|
||
Attachment #8883141 -
Flags: review?(mikokm)
Updated•8 years ago
|
Attachment #8883140 -
Flags: review?(mikokm) → review+
Updated•8 years ago
|
Attachment #8883141 -
Flags: review?(mikokm) → review+
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/15c1c233de01
Don't clear prepared data during rendering since we can visit Layers multiple times in the presence of plane splitting. r=miko
https://hg.mozilla.org/integration/mozilla-inbound/rev/985acaa2a79e
Don't compute prepared data multiple times for ContainerLayers that are duplicated. r=miko
Comment 8•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/15c1c233de01
https://hg.mozilla.org/mozilla-central/rev/985acaa2a79e
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Updated•8 years ago
|
status-firefox54:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•