Bug 1377324 - Don't clear prepared data during rendering since we can visit Layers multiple times in the presence of plane splitting. r=miko